# ai-assist-py

./: .gitignore  README.md  UPGRADE_NOTES.md  build.py  lint.bat  lint.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  db.py  enums.py  main.py  models.py  openai_client.py  orm_models.py  utils.py
app/ui/: __init__.py  chat_tab.py  preset_tab.py  settings_tab.py
