[project]
name = "ai-assist-py"
version = "0.1.0"
description = "OpenAI-powered desktop assistant with multi-chat and preset tabs"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.54.0",
    "FreeSimpleGUI>=5.1.1",
    "loguru>=0.7.2",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.7.0", "mypy>=1.13.0", "nuitka>=2.5.0"]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
ignore = []
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
